# Rust-messaging-example

./: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml
bins/app/: Cargo.toml
bins/app/src/: main.rs  web.rs
bins/app/src/application/: configure.rs
bins/app/src/application/slack_message/: contract.rs  data.rs  domain.rs  infrastructure.rs  mod.rs  setup.rs  test.rs
bins/app/src/application/slack_message/http/: handle_create.rs  handle_index.rs  mod.rs
bins/app/src/application/templates/: index.html
libs/config/: Cargo.toml
libs/config/src/: lib.rs
libs/error/: Cargo.toml  README.md
libs/error/src/: lib.rs
libs/infrastructure/: Cargo.toml
libs/infrastructure/src/: db.rs  lib.rs  schema.rs
libs/support/: Cargo.toml
libs/support/src/: lib.rs
libs/support/src/store/models/: mod.rs  slack_message.rs
migrations/2023-07-11-103633_create_slack_messages/: up.sql
