[package]
name = "rust-forge-task-slack-message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Http stuff
actix-web = "4.3.1"
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
http = "0.2"

# database stuff
diesel = { version = "2.1.0", features = [
  "postgres",
  "chrono",
  "r2d2",
  "serde_json",
] }

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# codegen stuff
async-trait = "0.1"

#helpers
validr = "0.3.1"
dotenv = "0.15.0"
uuid = "0.8.2"
env_logger = "0.10.0"

# Workspace
error = { path = "../../libs/error" }
support = { path = "../../libs/support" }
infrastructure = { path = "../../libs/infrastructure" }
config = { path = "../../libs/config" }
