[package]
edition = "2021"
name = "support"
publish = false
version = "0.1.0"

[dependencies]
# Http stuff
actix-web = "4.3.1"
reqwest = { version = "0.11.10", features = ["json", "blocking"] }

# database stuff
diesel = { version = "2.1.0", features = [
    "postgres",
    "r2d2",
] }
chrono = { version = "0.4.26", features = ["serde"] }

# serde
serde = { version = "1.0", features = ["derive"] }

# Workspace
infrastructure = { path = "../infrastructure", features = ["dev"] }
error = { path = "../error" }

